--- a/style.css
+++ b/style.css
@@ -94,4 +94,32 @@ nav a:hover {
 .author img {
     width: 150px;
     border-radius: 50%;
+}nav ul {
+    list-style-type: none;
+    background-color: #222;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    margin: 0;
+}
+
+nav li {
+    margin: 0 15px;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 8px 12px;
+}
+
+nav a:hover {
+    background-color: #444;
+    border-radius: 5px;
+}
+
+.img-right {
+    float: right;
+    margin: 10px;
 }
